tests/paczka1/small_fuzzy/24145848.err
Error in line 3: A795 S10 77,9
Error in line 5: SNIIwn2ldF A795 94,9
